Added background image

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       tabindex="-1"
       aria-labelledby="addNewModalLabel"
       aria-hidden="true"
+      style={{background-image: url("./styles/shared image.png");}}
     >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content" style="background: lightslategray;">
